compositor: Fix regression of shaded windows

Fix issues drawing shaded window shadows.

https://bugzilla.gnome.org/show_bug.cgi?id=693714